fixed typos and small mistakes
